<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="uiState"
            type="androidx.lifecycle.LiveData&lt;com.mrea.weatherapp.presentation.main.MainUiState>" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Theme.NextAppWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="?attr/colorPrimary"
                android:paddingBottom="8dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@android:drawable/ic_menu_search"
                app:title="@{uiState.currentLocation}"
                app:titleTextColor="@color/white"
                tools:title="Current City">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorOnPrimary"
                    android:hint="@string/zip_code"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColorHint="@color/orange_700"
                    app:boxBackgroundMode="outline"
                    app:errorIconDrawable="@android:drawable/ic_delete"
                    app:errorIconTint="@android:color/holo_red_dark"
                    app:errorTextColor="@android:color/holo_red_dark"
                    app:hintTextColor="@color/orange_700"
                    app:textInputUiState="@{uiState.searchBox}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnPrimary"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.appbar.MaterialToolbar>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foregroundTint="@color/white"
                app:animationUiState="@{uiState.animation}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView" />

            <ProgressBar
                android:id="@+id/enrollProgress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminateTint="?attr/colorPrimary"
                app:isVisible="@{uiState.isLoading}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="?attr/colorOnSurface"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                app:isVisible="@{uiState.showContent}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/refreshIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_refresh"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/currentWeatherImage"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="fitXY"
                        app:imageUiState="@{uiState.icon}"
                        app:layout_constraintEnd_toStartOf="@id/feelsLike"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:background="@color/orange_200" />

                    <TextView
                        android:id="@+id/currentTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{uiState.currentTemperature}"
                        android:textColor="@color/charcoal"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toTopOf="@id/feelsLike"
                        app:layout_constraintStart_toStartOf="@id/feelsLike"
                        app:layout_constraintTop_toTopOf="@+id/currentWeatherImage"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="80" />

                    <TextView
                        android:id="@+id/feelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@{uiState.feelsLikeTemperature}"
                        android:textColor="@color/charcoal"
                        app:layout_constraintBottom_toBottomOf="@id/currentWeatherImage"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/currentWeatherImage"
                        app:layout_constraintTop_toBottomOf="@id/currentTemperature"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="Feels 86" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{uiState.currentWeatherDescription}"
                        android:textColor="@color/charcoal"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/currentWeatherImage"
                        tools:text="80" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/errorIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_dialog_alert"
                app:isVisible="@{uiState.hasError}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/holo_red_dark" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/error_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:isVisible="@{uiState.hasError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorIcon" />

            <ImageView
                android:id="@+id/errorTryAgainIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_refresh"
                app:isVisible="@{uiState.hasError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorText"
                app:tint="@color/blue_700" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- region DebugDrawer -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawerView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <RadioGroup
                android:id="@+id/animationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animation"
                    android:textColor="@color/charcoal"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/snow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snow"
                    android:textColor="@color/charcoal" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rain"
                    android:textColor="@color/charcoal" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"
                    android:textColor="@color/charcoal" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clouds"
                    android:textColor="@color/charcoal" />

            </RadioGroup>

        </com.google.android.material.navigation.NavigationView>
        <!--endregion-->

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
